--- a/package.xml
+++ b/package.xml
@@ -11,4 +11,7 @@
   <build_depend>action_server</build_depend>
   <run_depend>action_server</run_depend>
 
+  <build_depend>ed</build_depend>
+  <run_depend>ed</run_depend>
+
 </package>
