--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,8 @@
 
   <license>TODO</license>
 
+  <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>action_server</build_depend>
   <run_depend>action_server</run_depend>
 
