Make nl_robot_console a service

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(nl_robot_console)
 
-catkin_python_setup()
-
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES bla
-#  CATKIN_DEPENDS other_catkin_pkg
-#  DEPENDS system_lib
-)
-
 find_package(catkin REQUIRED COMPONENTS
       message_generation
+      std_msgs
 )
+
+catkin_python_setup()
 
 # Generate services in the 'srv' folder
 add_service_files(
@@ -20,3 +14,11 @@ add_service_files(
     TextCommand.srv
 )
 
+generate_messages(DEPENDENCIES std_msgs)
+
+catkin_package(
+#  INCLUDE_DIRS include
+#  LIBRARIES bla
+#  CATKIN_DEPENDS other_catkin_pkg
+#  DEPENDS system_lib
+)
