--- a/package.xml
+++ b/package.xml
@@ -16,4 +16,6 @@
   <build_depend>ed</build_depend>
   <run_depend>ed</run_depend>
 
+  <build_depend>grammar_parser</build_depend>
+  <run_depend>grammar_parser</run_depend>
 </package>
