--- a/package.xml
+++ b/package.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>nl_robot_console</name>
   <version>0.0.1</version>
   <description>Natural Language Robot Console</description>
 
   <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>action_server</build_depend>
-  <run_depend>action_server</run_depend>
+  <depend>action_server</depend>
+  <depend>ed_msgs</depend>
+  <depend>grammar_parser</depend>
+  <depend>robocup_knowledge</depend>
 
-  <build_depend>ed_msgs</build_depend>
-  <run_depend>ed_msgs</run_depend>
-
-  <build_depend>grammar_parser</build_depend>
-  <run_depend>grammar_parser</run_depend>
 </package>
