prepare for python3/noetic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(nl_robot_console)
 
 find_package(catkin REQUIRED COMPONENTS
       message_generation
-      std_msgs
       grammar_parser
       robocup_knowledge
 )
@@ -16,11 +15,11 @@ add_service_files(
     TextCommand.srv
 )
 
-generate_messages(DEPENDENCIES std_msgs)
+generate_messages(DEPENDENCIES)
 
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES bla
-#  CATKIN_DEPENDS other_catkin_pkg
+  CATKIN_DEPENDS message_runtime
 #  DEPENDS system_lib
 )
