--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model
+  href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>nl_robot_console</name>
   <version>0.0.1</version>
   <description>Natural Language Robot Console</description>
@@ -14,5 +17,10 @@
   <depend>ed_msgs</depend>
   <depend>grammar_parser</depend>
   <depend>robocup_knowledge</depend>
+
+  <build_depend>message_generation</build_depend>
+
+  <build_export_depend>message_runtime</build_export_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 </package>
